@@ -1,3 +1,12 @@
+2006-03-13  Alan Hourihane  <alanh@fairlite.demon.co.uk>
+
+	* src/blade_accel_exa.c: (BladeExaInit):
+	* src/trident_driver.c: (TRIDENTPreInit):
+	* src/xp4_accel_exa.c: (XP4ExaInit):
+	EXA fixups for version 2
+	Add missing break statement which confused XP4 & XP5.
+	Force 128MB XP5 to 64MB for now.
+
 2006-02-21  Alan Hourihane  <alanh@fairlite.demon.co.uk>
 
 	* man/trident.man:
